Add roadmap and protect demo preparation files
- Add ROADMAP.md with comprehensive future improvements
- Update README.md to reference roadmap
- Enhance .gitignore to exclude demo preparation files
- Repository now complete with full documentation suite

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@ working_dir/
 *.key
 *.pem
 config.json
+
+# Demo preparation (personal use only)
+DEMO_SCRIPT.md
+demo_notes.md
+video_prep.md
+*_demo_*
+*.loom
